# Video-Stabilization-of-the-NAO-robot-using-IMU-data

./: CMakeLists.txt  README.md  package.xml
include/image_viewer/: image_viewer.h
python_control/: operar_nao.py
src/: image_viewer_node.cpp  image_viewer_nodelet.cpp
